netmaker-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: &app "netmaker"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: *app
  selector:
    app: *app
    part-of: *app
